clippy, and don't hash invisible files for ts generation

--- a/examples/assets/file_upload.css
+++ b/examples/assets/file_upload.css
@@ -1,14 +1,11 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+    margin: 10px;
+    padding: 10px;
     background-color: #f4f4f4;
-    display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    flex-direction: column;
-    gap: 20px;
+    min-height: 100vh;
 }
 
 #drop-zone {
